# yomichan_rs

./: .gitattributes  .gitignore  BOTTLENECKS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  debug_decode.rs  discord_question.txt  expanded.rs  implementer-prompt.md  output.txt  run.sh  test.nu  test.sh  test_pragma.rs  tests.json  tests.sh
crates/kanji_processor/: Cargo.toml
crates/kanji_processor/src/: lib.rs
crates/module_macros/: Cargo.toml
crates/module_macros/src/: lib.rs
docs/superpowers/plans/: 2026-03-27-profile-ergonomics.md  2026-04-16-library-cleanup.md  2026-04-20-data-integrity-verification.md  2026-04-20-database-decoupling-plan.md  2026-04-20-domain-centric-restructuring-plan.md  2026-04-20-fast-importer.md  2026-04-20-sqlite-migration-plan.md  2026-04-21-public-api-docs-plan.md  2026-04-21-refactor-search-api-plan.md  2026-04-23-add-settings-tests.md  2026-04-23-settings-persistence.md
docs/superpowers/specs/: 2026-03-27-interior-mutability-design.md  2026-03-27-profile-ergonomics-design.md  2026-04-16-library-cleanup-design.md  2026-04-20-domain-centric-restructuring-design.md  2026-04-20-fast-importer-design.md  2026-04-20-sqlite-migration-design.md  2026-04-21-public-api-docs-design.md  2026-04-21-structured-search-api-design.md
src/: anki.rs  audio.rs  backend.rs  database.rs  dictionary.rs  dictionary_data.rs  dictionary_database.rs  dictionary_importer.rs  dictionary_worker_handler.rs  environment.rs  errors.rs  lib.rs  ptr.rs  settings.rs  structured_content.rs  test_utils.rs  text_scanner.rs  translation.rs  translation_internal.rs  translator.rs  translator.rs_top  translator_rs.txt  zip.rs
src/_language/: cjk_utils.rs  descriptors.rs  descriptors_d.rs  language_d.rs  transformer_internal_d.rs  transforms.rs  translation_d.rs
src/_language/ja/: text_preprocessors.rs  transforms.rs  wanakana.rs
src/anki/: core.rs  mod.rs
src/audio/: core.rs
src/database/: dictionary_database.rs  dictionary_importer.rs  dictionary_worker_handler.rs  handlers.rs  impl_dictionary_service.rs  mod.rs
src/database/importer/: importer_types.rs  mod.rs  structured_content.rs
src/language/: cjk_utils.rs  descriptors.rs  descriptors_d.rs  language_d.rs  languages.rs  mod.rs  multi_language_transformer.rs  text_processors.rs  text_utilities.rs  transformer_d.rs  transformer_interal.rs  transformer_internal_d.rs  transforms.rs  translation_d.rs  translator.rs
src/language/ja/: japanese.rs  mod.rs  text_preprocessors.rs  transforms.rs  wanakana.rs
src/method_modules/: dictionary_options.rs  mod.rs  options.rs
src/models/: dictionary.rs  mod.rs
src/scanner/: core.rs  mod.rs
src/settings/: core.rs  environment.rs  mod.rs  test.rs
src/tests/: importer_tests.rs  mod.rs  zip.rs
src/translator/: core.rs  internal_types.rs  mod.rs  regex_util.rs  top.rs  types.rs
src/utils/: errors.rs  mod.rs  test_utils.rs
test_dicts/daijisen/: term_bank_168.json
test_dicts/pitch_accent/: term_meta_bank_10.json  term_meta_bank_17.json  term_meta_bank_19.json  term_meta_bank_2.json  term_meta_bank_27.json  term_meta_bank_33.json  term_meta_bank_5.json
tests/: database_test.rs  options_test.rs  output.json  roundtrip_test.rs  search.json  test_compact_string.rs  test_glossary_postcard.rs  test_skip_none.rs  test_structured_search.rs  自業自得_original.json  自業自得_rust.json
tests/test_dicts/ajdfreq/: index.json  term_meta_bank_1.json
tests/test_dicts/daijirin/: index.json  tag_bank_1.json  term_bank_1.json  term_bank_10.json  term_bank_100.json  term_bank_101.json  term_bank_102.json  term_bank_103.json  term_bank_104.json  term_bank_105.json  term_bank_106.json  term_bank_107.json  term_bank_108.json  term_bank_109.json  term_bank_11.json  term_bank_110.json  term_bank_111.json  term_bank_112.json  term_bank_113.json  term_bank_114.json  term_bank_115.json  term_bank_116.json  term_bank_117.json  term_bank_118.json  term_bank_119.json  term_bank_12.json  term_bank_120.json  term_bank_121.json  term_bank_122.json  term_bank_123.json  term_bank_124.json  term_bank_125.json  term_bank_126.json  term_bank_127.json  term_bank_128.json  term_bank_129.json  term_bank_13.json  term_bank_130.json  term_bank_131.json  term_bank_132.json  (+130 more)
tests/test_dicts/daijirin_test_version/: index.json  term_bank_43.json
tests/test_dicts/daijisen/: tag_bank_1.json
tests/test_dicts/jpdb_freq/: index.json  term_meta_bank_1.json
tests/test_dicts/jpdb_kanji_freq/: index.json  kanji_meta_bank_1.json  kanji_meta_bank_mock.json
tests/test_dicts/kanjidict/: index.json  kanji_bank_1.json  kanji_bank_2.json  kanji_bank_mock.json  tag_bank_1.json
tests/test_dicts/kotobankesjp/: index.json  styles.css  tag_bank_1.json  term_bank_1.json  term_bank_10.json  term_bank_11.json  term_bank_2.json  term_bank_3.json  term_bank_4.json  term_bank_5.json  term_bank_6.json  term_bank_7.json  term_bank_8.json  term_bank_9.json
tests/test_dicts/kty-es-en/: index.json  styles.css  tag_bank_1.json  term_bank_58.json  term_bank_60.json
tests/test_dicts/oubunshakokugo/: index.json  term_bank_1.json  term_bank_10.json  term_bank_2.json  term_bank_3.json  term_bank_4.json  term_bank_5.json  term_bank_6.json  term_bank_7.json  term_bank_8.json  term_bank_9.json
tests/test_dicts/pitch_accent/: index.json  tag_bank_1.json  term_meta_bank_1.json  term_meta_bank_10.json  term_meta_bank_11.json  term_meta_bank_12.json  term_meta_bank_13.json  term_meta_bank_14.json  term_meta_bank_15.json  term_meta_bank_16.json  term_meta_bank_17.json  term_meta_bank_18.json  term_meta_bank_19.json  term_meta_bank_2.json  term_meta_bank_20.json  term_meta_bank_21.json  term_meta_bank_22.json  term_meta_bank_23.json  term_meta_bank_24.json  term_meta_bank_25.json  term_meta_bank_26.json  term_meta_bank_27.json  term_meta_bank_28.json  term_meta_bank_29.json  term_meta_bank_3.json  term_meta_bank_30.json  term_meta_bank_31.json  term_meta_bank_32.json  term_meta_bank_33.json  term_meta_bank_4.json  term_meta_bank_5.json  term_meta_bank_6.json  term_meta_bank_7.json  term_meta_bank_8.json  (+1 more)
tests/yomichan_rs/: db.ycd
(+16 files in other folders)
