[package]
name = "yomichan_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["rc"] }
serde_json = "1.0.117"
thiserror = "2.0.12"
native_db = { git = "https://github.com/vincent-herlemont/native_db", rev = "03ab5a3" }
native_model = { version = "0.6.1", features = [
	"rmp_serde_1_3",
	"postcard_1_0",
] }
zip = "2.1.3"
tempfile = "3.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
rayon = "1.10.0"
serde-untagged = "0.1.6"
uuid = { version = "1.10.0", features = ["v4", "v7", "fast-rng"] }
snafu = "0.8.4"
bimap = { version = "0.6.3", features = ["std"] }
unicode-segmentation = "1.11.0"
unicode-normalization = "0.1.23"
wana_kana = "3.0.0"
pretty_assertions = "1.4.1"
color-eyre = "0.6.3"
derive_more = { version = "1.0.0", features = ["debug", "from"] }
indexmap = { version = "2.7.0", features = ["serde"] }
language_transformer = { git = "https://github.com/aramrw/ycrs_language_transformer", branch = "update" }
icu = "2.0.0"
fancy-regex = "0.14.0"
getset = "0.1.5"
serde_with = "3.12.0"
url = "2.5.4"
anki_direct = { git = "https://github.com/aramrw/anki_direct", branch = "master" }
rmp-serde = "1.3.0"
module_macros = { path = "crates/module_macros" }
rmpv = { version = "1.3.0", features = ["with-serde"] }

[workspace]
members = ["crates/kanji_processor", "crates/module_macros"]

# https://www.reddit.com/r/rust/comments/gaeiwm/how_to_optionally_run_certain_tests/
[features]
default = []
rayon = []

# pprof is linux only
[target.'cfg(unix)'.dependencies]
pprof = { version = "0.13", features = ["flamegraph"] }

# compiles the test with --release
[profile.test]
inherits = "release"

# [net]
# git-fetch-with-cli = true
