[package]
name = "yomichan_rs"
authors = ["aramrw"]
repository = "https://github.com/aramrw/yomichan_rs"
version = "0.0.1"
edition = "2021"
license = "GPL3"
exclude = ["tests"]
keywords = ["yomichan", "yomitan", "yomichan_rs", "language"]

[dependencies]
# custom crates
deinflector = { git = "https://github.com/aramrw/deinflector", branch = "main" }
yomichan_importer = { path = "../importer", features = ["full"]}
anki_direct = { git = "https://github.com/aramrw/anki_direct", branch = "note", features = [
	"cache",
] }

serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
thiserror = "2.0.12"
native_db = { git = "https://github.com/vincent-herlemont/native_db", rev = "03ab5a3" }
native_model = { version = "0.6.2", features = [
	"rmp_serde_1_3",
	"postcard_1_0",
] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
chrono = { version = "0.4.38", features = ["serde"] }
rayon = "1.10.0"
uuid = { version = "1.10.0", features = ["v4", "v7", "fast-rng"] }
derive_more = { version = "1.0.0", features = [
	"debug",
	"from",
	"deref",
	"deref_mut",
] }
indexmap = { version = "2.7.1", features = ["serde"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
fancy-regex = "0.14.0"
getset = "0.1.6"
serde_with = "3.13.0"
url = "2.5.4"
better_default = "1.0.5"
parking_lot = { version = "0.12.4", features = [
	"arc_lock",
	"serde",
	"send_guard",
] }
tracing = "0.1.41"

log = "0.4"
compact_str = "0.9.0"
postcard = { version = "1.1.3", features = ["use-std"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
scopeguard = "1.2.0"
tracing-test = "0.2.5"
tracing-subscriber = "0.3.19"

# https://www.reddit.com/r/rust/comments/gaeiwm/how_to_optionally_run_certain_tests/
[features]
default = []
rayon = []
anki = []
# tracing is now mandatory
pprof = ["dep:pprof"]

# pprof is linux/macos only
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
pprof = { version = "0.13", features = ["flamegraph"], optional = true }

[profile.release]
opt-level = 3

# compiles the test with --release
[profile.test]
inherits = "release"

# [net]
# git-fetch-with-cli = true
